packages/typ/tests/fixtures/diagnostics/0060_core_slot_payload_mismatch_05.ml.expected
File "0060_core_slot_payload_mismatch_05.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0060_core_slot_payload_mismatch_05 is not a valid module name.

File "0060_core_slot_payload_mismatch_05.ml", line 2, characters 24-28:
2 | let _ : int slot = Slot true
                            ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
